[package]
name = "cwab"
authors = ["Nathan Jaremko <nathan@jaremko.ca>"]
version = "0.0.1"
edition = "2021"
description = "A correct, efficient, and simple job processor"
license = "LGPL-3.0"
readme = "README.md"
keywords = ["job", "processor", "queue", "worker"]
repository = "https://github.com/cwabcorp/cwab"
categories = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "^1.0"
async-trait = "^0.1.0"
blake3 = "^1.3.3"
futures-util = "^0.3.25"
redis = "0.23.0"
reqwest = { version = "^0.11", features = ["json"] }
serde = "^1.0"
serde_json = "^1.0"
tempfile = "^3.3.0"
thiserror = "1.0"
tokio = { version = "1.24.2", features = ["full"] }
