[package]
name = "cwab"
authors = ["Nathan Jaremko <nathan@jaremko.ca>"]
version = "0.5.12"
edition = "2021"
description = "A correct, efficient, and simple job processor"
license = "LGPL-3.0"
readme = "README.md"
keywords = ["job", "processor", "queue", "worker", "background"]
repository = "https://github.com/cwabcorp/cwab"
categories = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "^1.0.70", features = ["backtrace"] }
async-scoped = { version = "0.7.1", features = ["use-tokio"] }
async-trait = "^0.1.0"
base64 = "0.21.0"
blake3 = "^1.3.3"
chacha20poly1305 = "0.10.1"
chrono = "0.4.24"
clap = { version = "^4.2.4", features = ["derive"] }
cron = "^0.12.0"
crossbeam = "^0.8.2"
dyn-clone = "^1.0.11"
futures = "^0.3.0"
futures-util = "^0.3.25"
pbkdf2 = "^0.12.1"
r2d2 = "^0.8.0"
itertools = "^0.10.5"
rand = "^0.8.0"
redis = { version = "^0.23.0",  features = ["r2d2", "tokio-comp", "tokio-native-tls-comp"]}
reqwest = { version = "^0.11.16", features = ["json"] }
serde = { version = "1.0.109", features = ["derive"] }
serde_json = "^1.0.96"
sha2 = "^0.10.6"
signal-hook = "^0.3.15"
tempfile = "^3.3.0"
thiserror = "^1.0.40"
time = { version = "^0.3", features = ["serde"] }
tokio = { version = "1.24.2", features = ["full"] }
toml = "^0.7.3"
uuid = { version = "^1", features = ["v4", "serde"] }
